# cpp-template

./: .gitignore  CMakeLists.txt  ReadMe.md
.github/workflows/: ci.yml
python/: CMakeLists.txt  def_hello.cpp
src/hello/: hello.cpp
test/hello/: CMakeLists.txt
